--- a/demo-sites/drum-kit-site/index.html
+++ b/demo-sites/drum-kit-site/index.html
@@ -21,9 +21,10 @@
     <button class="l drum">l</button>
   </div>
 
+  <script src="index.js" type="text/javascript" charset="utf-8"></script>
 
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ online.
   </footer>
 </body>
 
