--- a/demo-sites/space-tourism/index.html
+++ b/demo-sites/space-tourism/index.html
@@ -1,27 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+
+  <script type="text/javascript" src="https://livejs.com/live.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200;500&family=Barlow:wght@300&family=Bellefair&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Space tourism website</title>
 </head>
+
 <body>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg col-med-4">
+    <div class="container-fluid" id="menu-container">
+      <a class="navbar-brand logo" href="index.html"><img src="assets/shared/logo.svg" width="48" height="48"></a>
+      <div class="collapse navbar-collapse col-med-4 d-flex flex-row-reverse navbar-expand-md" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href=""><span class="bold-numbers">00 </span> Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href=""><span class="bold-numbers">01 </span> Destination</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href=""><span class="bold-numbers">02 </span> Crew</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href=""><span class="bold-numbers">03 </span> Technology</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="space-p col-med-12 col-lg-6">
+    <h3>So, you want to travel to</h3>
+    <h1 class="space-text">Space</h1>
+    <p>Let’s face it; if you want to go to space, you might as well genuinely go to
+      outer space and not hover kind of on the edge of it. Well sit back, and relax
+      because we’ll give you a truly out of this world experience!</p>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+  </div>
 
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!
 
   Explore
 
 </body>
+
 </html>
