finish first draft of homepage

--- a/demo-sites/space-tourism/index.html
+++ b/demo-sites/space-tourism/index.html
@@ -45,17 +45,21 @@
       </div>
     </div>
   </nav>
-  <div class="space-p col-med-12 col-lg-6">
-    <h3>So, you want to travel to</h3>
-    <h1 class="space-text">Space</h1>
-    <p>Let’s face it; if you want to go to space, you might as well genuinely go to
-      outer space and not hover kind of on the edge of it. Well sit back, and relax
-      because we’ll give you a truly out of this world experience!</p>
+  <div class="container">
+    <div class="row">
+      <div class="space-p col-med-12 col-lg-6">
+        <h3>So, you want to travel to</h3>
+        <h1 class="space-text">Space</h1>
+        <p>Let’s face it; if you want to go to space, you might as well genuinely go to
+          outer space and not hover kind of on the edge of it. Well sit back, and relax
+          because we’ll give you a truly out of this world experience!</p>
 
+      </div>
+      <div class="explore col-med-12 col-lg-6">
+        <h2 class="explore-text">Explore</h2>
+      </div>
+    </div>
   </div>
-
-
-  Explore
 
 </body>
 
